Actions
Bug #10542
closedspdsock: cast between incompatible function types
Start date:
2019-03-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/inet/ip/spdsock.c:174:8: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] NULL, (pfi_t)spdsock_rsrv, spdsock_open, spdsock_close, ^ ../../common/inet/ip/spdsock.c:179:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (pfi_t)spdsock_wput, (pfi_t)spdsock_wsrv, NULL, NULL, NULL, &info ^ ../../common/inet/ip/spdsock.c:179:23: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (pfi_t)spdsock_wput, (pfi_t)spdsock_wsrv, NULL, NULL, NULL, &info ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 1752e73c5b177fe2f2284c58df9d4e11fa24ffdf
commit 1752e73c5b177fe2f2284c58df9d4e11fa24ffdf Author: Toomas Soome <tsoome@me.com> Date: 2019-03-21T16:42:38.000Z 10542 spdsock: cast between incompatible function types Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions